# VLM_responces

./: .gitignore  README.md  config.py  dump_db.py  pyproject.toml  requirements.txt  test_events_api.py  verify_florence.py
backend/: ai_broker.py  ai_module.py  database.py  florence_ai.py  local_ai_local.py  main.py  tracker.py  tracking_manager.py  vlm_test.py
frontend/: app.js  index.html  style.css
